# data_challenge_fase_1

./: .gitignore  README.md  app.py  deputados.xlsx  main.py  partidos.xlsx  proposicoes.xlsx  pyproject.toml  requirements.txt  votacoes.xlsx
.github/workflows/: incremental.yml
jsons/deputados/: deputados_pagina_1.json  deputados_pagina_2.json  deputados_pagina_3.json  deputados_pagina_4.json  deputados_pagina_5.json  deputados_pagina_6.json  deputados_pagina_7.json  deputados_pagina_8.json
jsons/despesas/: deputados_104552_despesas_pagina_1.json  deputados_104552_despesas_pagina_2.json  deputados_104552_despesas_pagina_3.json  deputados_104552_despesas_pagina_4.json  deputados_104552_despesas_pagina_5.json  deputados_104552_despesas_pagina_6.json  deputados_104552_despesas_pagina_7.json  deputados_107283_despesas_pagina_1.json  deputados_107283_despesas_pagina_2.json  deputados_107283_despesas_pagina_3.json  deputados_107970_despesas_pagina_1.json  deputados_107970_despesas_pagina_10.json  deputados_107970_despesas_pagina_11.json  deputados_107970_despesas_pagina_12.json  deputados_107970_despesas_pagina_13.json  deputados_107970_despesas_pagina_14.json  deputados_107970_despesas_pagina_15.json  deputados_107970_despesas_pagina_16.json  deputados_107970_despesas_pagina_2.json  deputados_107970_despesas_pagina_3.json  deputados_107970_despesas_pagina_4.json  deputados_107970_despesas_pagina_5.json  deputados_107970_despesas_pagina_6.json  (+5694 more)
services/: api.py
src/: deputados.py  despesas.py  partidos.py  proposicoes.py  votacoes.py
(+81 files in other folders)
