[project]
name = "data-challenge-fase-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg2>=2.9.12",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
]
